--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </header>
-    <div class="container display-1 text-center mt-5" id="cart">CART</div>
+    <div class="container display-1 text-center mt-5" id="cart2">CART</div>
     <div class="firstWrapper text-center" id="firstWrapper">
       <div class="container mainBear">
         <div class="container"></div>
