--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>#</title>
+        <title>Orinoco Home</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link href="css/main.css" rel="stylesheet">
@@ -61,4 +62,4 @@
     
     
     </body>
-</html?
+</html>
